-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, jfx11, jfx17, jfx21, jfx22
-
Component/s: javafx
-
b04
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8313971 | jfx21.0.1 | Alexander Matveev | P3 | Resolved | Fixed | b03 |
| JDK-8313976 | 8u401 | Alexander Matveev | P3 | Resolved | Fixed | b01 |
Possible NULL pointer access in NativeAudioSpectrum and NativeVideoBuffer.
Java_com_sun_media_jfxmediaimpl_NativeAudioSpectrum_nativeSetBands()
- NULL pointer check needed for CJavaBandsHolder allocation.
Java_com_sun_media_jfxmediaimpl_NativeVideoBuffer_nativeGetPlaneStrides()
- NULL pointer check is needed for return value of NewIntArray().
Java_com_sun_media_jfxmediaimpl_NativeAudioSpectrum_nativeSetBands()
- NULL pointer check needed for CJavaBandsHolder allocation.
Java_com_sun_media_jfxmediaimpl_NativeVideoBuffer_nativeGetPlaneStrides()
- NULL pointer check is needed for return value of NewIntArray().
- backported by
-
JDK-8313971 Possible NULL pointer access in NativeAudioSpectrum and NativeVideoBuffer
-
- Resolved
-
-
JDK-8313976 Possible NULL pointer access in NativeAudioSpectrum and NativeVideoBuffer
-
- Resolved
-
- blocks
-
JDK-8316020 ☂ Check memory allocation for null return value
-
- Open
-
- links to
-
Commit
openjdk/jfx21u/27b179a3
-
Commit
openjdk/jfx/9f180e20
-
Review
openjdk/jfx21u/7
-
Review
openjdk/jfx/1204
(2 links to)