8313900: Possible NULL pointer access in NativeAudioSpectrum and NativeVideoBuffer